# signate_nedo_challenge

./: .gitignore  LICENSE  README.md  pyproject.toml
input/: .gitkeep
input/nedo-challenge-cwt-for-ref/: .gitkeep
input/nedo-challenge-cwt-for-test/: .gitkeep
input/nedo-challenge-cwt-for-train/: .gitkeep
scripts/: evaluate_model.py  inference.py  preprocess_data.py  preprocess_test_data.py  train_model.py
src/: main.py
src/data/: __init__.py  dataset.py  preprocessing.py
src/training/: __init__.py  loss.py  trainer.py
src/utils/: __init__.py  config.py  utils.py
