[tool.poetry]
name = "signate-nedo-challenge"
version = "0.1.0"
description = ""
authors = ["vodoomi <abe.mikito@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
scipy = "^1.16.0"
torch = "^2.7.1"
transformers = "^4.52.4"
scikit-learn = "^1.7.0"
timm = "^1.0.15"
albumentations = "^2.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
